  - Separated "TTF options" menu group that contains
    TrueType font (TTF) related menu options from the
    "Text-mode" menu group in "Video" menu. (Wengier)
  - The "Show menu bar" option now appears in system
    menu of the Windows SDL2 build too. (Wengier)
  - If a language file fails to load, DOSBox-X will now
    show a warning dialog instead of exiting. (Wengier)
  - Fixed the mouse sensitivity menu option (under the
    "DOS" menu) not working. (Wengier)
  - Fixed the color palette problem when switching to
    graphic mode from mono mode. (Wengier)
  - Fixed full-screen TTF output may not fully cover
    the background screen in Linux. (Wengier)
  - Fixed that lines starting with "%" in [autoexec]
    section are being ignored. (Wengier)
  - Fixed issues with building the code with original
    MinGW using the ./build-mingw script. (Wengier)
  - IMGMOUNT now assumes the ISO type for .GOG/.INS
    files (which are equivalent to .CUE/.INS files)
    if no type is specified by the user. (Wengier)
  - Improved the dynamic core including the way its
    cache is allocated and to support dual mapping.
  - Added support for automatic switching from TTF
    ouptut to another output in PC-98 mode, allowing
    Windows 3.1 to run in this mode. (Wengier)
  - Added OPL3Duo support, which passes OPL3 output
    to an OPL3Duo Arduino board with a specific
    configuration if desired. Set the config option
    "oplemu=opl3duoboard" to use it. (josephillips85)
0.83.8
  - Added support for scalable TrueType font (TTF)
    output for text-mode programs. Set "output=ttf"
    and optionally a monospaced TTF font (such as
    consola) with config option "ttf.font" to use it.
    Lines and columns can be specified with config
    options "ttf.lins" and "ttf.cols", and the cursor
    can be made blinking with the option "ttf.blinkc".
    The config options "ttf.ptsize" and "ttf.winperc"
    can be used to set the TTF font size and window