@@ -24,7 +24,7 @@
 #                      Possible values: none, middle, right, arrows.
 # clip_key_modifier: Change the keyboard modifier for the shared clipboard copy/paste function using a mouse button or arrow keys.
 #                      The default modifier is "shift" (both left and right shift keys). Set to "none" if no modifier is desired.
-#                      Possible values: none, alt, lalt, ralt, ctrl, lctrl, rctrl, shift, lshift, rshift.
+#                      Possible values: none, ctrl, lctrl, rctrl, alt, lalt, ralt, shift, lshift, rshift, ctrlalt, ctrlshift, altshift, lctrlalt, lctrlshift, laltshift, rctrlalt, rctrlshift, raltshift.
 #  clip_paste_speed: Set keyboard speed for pasting from the shared clipboard.
 #                      If the default setting of 30 causes lost keystrokes, increase the number.
 #                      Or experiment with decreasing the number for applications that accept keystrokes quickly.
