@@ -145,6 +145,10 @@
     menu of the Windows SDL2 build too. (Wengier)
   - If a language file fails to load, DOSBox-X will now
     show a warning dialog instead of exiting. (Wengier)
+  - The option "clip_key_modifier" now accepts values
+    like "ctrlalt", "ctrlshift", "altshift". (Wengier)
+  - Fixed 2D texture not showing for 3dfx games in the
+    Glide passthrough mode. (Wengier)
   - Fixed the mouse sensitivity menu option (under the
     "DOS" menu) not working. (Wengier)
   - Fixed the color palette problem when switching to
